created contents data classes for app's learning contents

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="istruction_text">Before you begin your journey, choose the path you wish to explore. Each path offers a unique learning experience and challenges. Select wisely!</string>
     <string name="teen_secure">Teen Secure</string>
     <string name="ransom_wrangler">Ransom Wrangler</string>
+    <string name="tips">Tips:</string>
 </resources>
