--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TeenSecure</string>
-    <string name="welcome_text">Welcome to</string>
+    <string name="welcome_text">Welcome</string>
     <string name="start_text">Start</string>
     <string name="about_btn_label">About</string>
     <!-- TODO: Remove or change this placeholder text -->
