--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="rw_level_2_text">Level 2: Intermediate Knowledge (Locked)</string>
     <string name="rw_level_3_text">Level 3: Advanced Understanding (Locked)</string>
     <string name="rw_level_4_text">Level 4: Proficient Knowledge (Locked)</string>
+    <string name="test_your_knowledge_btn_text">Test Your Knowledge</string>
+    <string name="your_score_txt">Your Score</string>
 </resources>
