feat: Implement drag-and-drop functionality for quiz questions and retrieve new item order
- Added RecyclerView to handle drag-and-drop for DragAndDrop question type
- Created DragAndDropAdapter to manage and rearrange quiz items dynamically
- Implemented ItemTouchHelper for drag-and-drop interactions
- Added method to retrieve the new order of items after rearrangement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="rw_level_4_text">Level 4: Proficient Knowledge (Locked)</string>
     <string name="test_your_knowledge_btn_text">Test Your Knowledge</string>
     <string name="your_score_txt">Your Score</string>
+    <string name="next_btn_text">Next</string>
+    <string name="submit_btn_text">Submit</string>
+    <string name="default_current_quiz_no">1</string>
 </resources>
