Track correct answers count and total score in Game model
- Updated Game class to track both total score and number of correct answers.
- Modified addScore function to handle correct answer validation and increment the correctAnswersCount accordingly.
- Adjusted quiz grading logic to pass both the reward points and correctness status of each answer when adding score.
- Added functionality to retrieve the total score and number of correct answers at the end of the game.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="next_btn_text">Next</string>
     <string name="submit_btn_text">Submit</string>
     <string name="default_current_quiz_no">1</string>
+    <string name="congratulations">Congratulations!</string>
+    <string name="course_completed">You have completed the course:</string>
+    <string name="motivation">\"When we are motivated by goals that have deep meaning, by dreams that need completion, by pure love that needs expressing, then we truly live life\"</string>
 </resources>
