created profile screen, added options menu to main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="congratulations">Congratulations!</string>
     <string name="course_completed">You have completed the course:</string>
     <string name="motivation">\"When we are motivated by goals that have deep meaning, by dreams that need completion, by pure love that needs expressing, then we truly live life\"</string>
+    <string name="about_app">About</string>
+    <string name="profile">My Profile</string>
 </resources>
